--- a/src/ScalableTeams.HumanResourcesManagement.Domain/ScalableTeams.HumanResourcesManagement.Domain.csproj
+++ b/src/ScalableTeams.HumanResourcesManagement.Domain/ScalableTeams.HumanResourcesManagement.Domain.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.8.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
